Fix backface-visibility issue

--- a/src/components/NoteEditor/NoteEditor.module.css
+++ b/src/components/NoteEditor/NoteEditor.module.css
@@ -80,12 +80,27 @@
 }
 .title-input, .content-input {
   padding: 10px;
-  background-color: #333;
   border: none;
   color: white;
   font-size: 15px;
 }
-.content-input {
+.title-input {
+  background-color: #333;
+}
+/* This wrapper is needed to fix the webkit bug
+ *
+ *  Backface-visibility not working when
+ *  textarea have a background color and  
+ *  is overflowing (scrollbar active)
+*/
+.content-input-wrapper {
   flex-grow: 1;
+  background-color: #333;
+}
+.content-input {
+  width: 100%;
+  height: 100%;
   resize: none;
+  background-color: transparent;
+  overflow: auto;
 }
